gke-ingress/k8s-yamls/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdp-hybris-be-mgmt
  annotations:
    cloud.google.com/backend-config: '{"default": "http-hc-config-be-mgmt"}'
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app.kubernetes.io/instance: kdp-hybris-be
    app.kubernetes.io/name: kdp-hybris
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cookie
  type: NodePort
