gke-ingress/k8s-yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: lb-dep-perf
  name: kdp-ingress
spec:
  rules:
  - host: cookie.ca
    http:
      paths:
      - backend:
          service:
            name: kdp-hybris-be-mgmt
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
